@@ -1,3 +1,4 @@
+2013-10-23 Fixed tests in Single State Button
 2013-10-23 Added 2 commands markAsCorrect and markAsWrong to Image Viewer addon
 2013-10-22 Fixed problem with LaTeX in Text Selection addon
 2013-10-21 Added displayName for addons' properties
@@ -27,7 +28,7 @@
 2013-10-03 Added stop propagation to addons: Connection, Hangman, Image Identification, Magic boxes, Gamememo, Multiplegap, Puzzle, Text selection, True False, Writing Calculations, Navigation Bar, Slide show, Image viewer, Animation
 2013-10-03 MP4 sources are now prefered in video addon
 2013-10-02 Fixed problem with Navigation Bar with page indexes.
-2013-10-02 Fixed problem with blocking Line Number addon and added new class 'disable' to '.outer' div when property 'Disable' is on true
+2013-10-02 Fixed problem with blocking Line Number addon and added new class 'disable' to '.outer' div when property 'Disable' is on true           d
 2013-10-01 Added page name to page loaded event
 2013-10-01 Fixed problem with definition of disable and not activity properties
 2013-10-01 Fixed problem with scoring in graph
